<resources>
    <string name="app_name">GamesApplication</string>
    <string name="welcome">Welcome!</string>
    <string name="developer">Developer by DS2M</string>
    <string name="text_subtitle">With our app it will be much easier and more fun to keep track of your games!</string>
    <string name="login">Login</string>
    <string name="logar">Log in</string>
    <string name="create_account">Create an account</string>
    <string name="to_remember">Remember me</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="new_account">New account</string>
    <string name="insert_photo">Let\'s choose a photo?</string>
    <string name="data_authentication">Data for authentication</string>
    <string name="person_data">Personal data</string>
    <string name="name">What\'s your name?</string>
    <string name="city">What is your city?</string>
    <string name="birthday">Birth date</string>
    <string name="level_gamer">What is your gaming level?</string>
    <string name="level_string">Casual</string>
    <string name="console_gamer">What is your favorite console?</string>
    <string name="sex">Sex:</string>
    <string name="masc">Masculine</string>
    <string name="fem">Feminine</string>
    <string name="save">Save</string>
    <string name="configuration">Configuration</string>
    <string name="exit">Exit</string>
    <string name="games_finished">Games Finished</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="age">Age</string>
    <string name="show_level">Displayed Level</string>
    <string name="username">Username</string>
    <string name="user_email">user@email</string>
    <string name="games">Games</string>
    <string name="registered_games">Your registered games</string>
    <string name="game_status">Games finished?</string>
    <string name="game_register">Register your game!</string>
    <string-array name="console">
        <item>PlayStation 5</item>
        <item>PlayStation 4</item>
        <item>PlayStation 3</item>
        <item>PlayStation 2</item>
        <item>PlayStation 1</item>
        <item>Nintendo Switch</item>
        <item>XBox One</item>
        <item>XBox One S</item>
        <item>XBox One X</item>
        <item>XBox Series S</item>
        <item>XBox Series X</item>
        <item>Xbox 360</item>
    </string-array>
</resources>